...
    <string name="dialog_tag_add_button_negative" translatable="false">@android:string/cancel</string>
    <string name="dialog_tag_add_button_positive" translatable="false">@string/save</string>
    <string name="dialog_tag_add_hint" translatable="false">@string/tag_name</string>
    <string name="dialog_tag_add_title" translatable="false">@string/add_tag</string>
    <string name="dialog_tag_error_message">An error occurred adding the tag. Please, try again. If the problem continues, contact us at %1$s%2$s%3$s%4$s%5$s for help.</string>
    <string name="dialog_tag_error_message_email" translatable="false">\u003c\u0061\u0020\u0068\u0072\u0065\u0066\u003d\u0022\u006d\u0061\u0069\u006c\u0074\u006f\u003a\u0073\u0075\u0070\u0070\u006f\u0072\u0074\u0040\u0073\u0069\u006d\u0070\u006c\u0065\u006e\u006f\u0074\u0065\u002e\u0063\u006f\u006d\u0022\u003e\u0073\u0075\u0070\u0070\u006f\u0072\u0074\u0040\u0073\u0069\u006d\u0070\u006c\u0065\u006
    <string name="tag_error_empty">Tags cannot be empty</string>
    <string name="tag_error_exists">Tag already exists</string>
    <string name="tag_error_length">Tag length too long</string>
    <string name="tag_error_spaces">Tags cannot contain spaces</string>
    <string name="tag_error_collaborator">Tags cannot be emails</string>

    <!-- Undo -->
    <string name="undo">Undo</string>
    <string name="note_deleted">Note trashed.</string>
    <string name="notes_trashed">Notes trashed.</string>
...
