<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_root"
    android:layout_height="match_parent"
    android:layout_weight="7"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <ListView
...
        android:layout_height="fill_parent"
        android:layout_width="@dimen/divider_height"
        android:visibility="gone">
    </View>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_button"
        android:contentDescription="@string/new_note"
        android:layout_gravity="end|bottom"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_large"
        android:layout_marginEnd="@dimen/padding_large"
        android:layout_width="wrap_content"
...
