<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center_vertical"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    android:minHeight="?android:attr/listPreferredItemHeight"
    android:orientation="horizontal"
    android:paddingEnd="?listPreferredItemPaddingRight"
    android:paddingStart="?listPreferredItemPaddingLeft">

    <TextView
        android:id="@android:id/title"
        android:ellipsize="marquee"
        android:fadingEdge="horizontal"
        android:layout_height="wrap_content"
        android:layout_marginEnd="6dp"
        android:layout_width="wrap_content"
        android:singleLine="true"
        android:text="@string/sign_out"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="?attr/settingsTextColor">
    </TextView>

    <TextView
        android:id="@android:id/summary"
        android:ellipsize="marquee"
        android:gravity="end"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:singleLine="true"
        android:textAlignment="gravity"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/gray_7a">
    </TextView>

</LinearLayout>
