<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="180dp">

        <View
            android:id="@+id/color_choose_indicator"
            android:layout_width="5dp"
            android:layout_height="match_parent" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/padding_extra_large"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/colorbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp">
            </RelativeLayout>

            <Button
                android:id="@+id/reset_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/color_reset"
                android:textColor="@color/simplenote_blue_accent"
                android:layout_margin="10dp"
                android:background = "@drawable/set_reminder_button_background"
                style="?android:attr/borderlessButtonStyle"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>
