...

        <FrameLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent">

            <LinearLayout
                android:id="@+id/note_fragment_container"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:showDividers="middle"
                android:animateLayoutChanges="true"
                android:weightSum="10">
...
